fixed image stretching

--- a/styles/project.module.sass
+++ b/styles/project.module.sass
@@ -61,7 +61,7 @@ $accent-color: rgb(89, 114, 255)
         padding: .5rem
     & table
         margin: auto
-        border:none
+        border: none
         border-collapse: collapse
         margin-bottom: 2rem
         // background: $dk-frosted-glass
@@ -97,15 +97,12 @@ $accent-color: rgb(89, 114, 255)
     display: block
     padding: 1rem
     position: relative
+    // height: 
     & .md_image_image
         display: block
-        position: relative
         margin: auto
-        top: 0
-        left: 0
-        right: 0
         max-width: 100%
-        height: 50vh
+        max-height: 50vh
 
         border-radius: 0.3rem
     & .img:hover
